--- a/public/app.css
+++ b/public/app.css
@@ -4,7 +4,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  
 }
 
 * {
@@ -231,5 +230,201 @@ code {
 @media (min-width: 62em) {
   .featurette-heading {
     margin-top: 7rem;
+  }
+}
+
+
+.align-center {
+  text-align: center;
+}
+.hash-list {
+  display: block;
+  padding: 0;
+  margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  .hash-list.cols-3 > li:nth-last-child(-n + 3) {
+    border-bottom: none;
+  }
+}
+@media (min-width: 768px) {
+  .hash-list.cols-3 > li {
+    width: 33.3333%;
+  }
+}
+.hash-list > li {
+  display: block;
+  float: left;
+  border-right: 1px solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.pad-30,
+.pad-30-all > * {
+  padding: 30px;
+}
+img {
+  border: 0;
+}
+.mgb-20,
+.mgb-20-all > * {
+  margin-bottom: 20px;
+}
+.wpx-100,
+.wpx-100-after:after {
+  width: 100px;
+}
+.img-round,
+.img-rel-round {
+  border-radius: 50%;
+}
+.padb-30,
+.padb-30-all > * {
+  padding-bottom: 30px;
+}
+
+.mgb-40,
+.mgb-40-all > * {
+  margin-bottom: 40px;
+}
+.align-center {
+  text-align: center;
+}
+[class*="line-b"] {
+  position: relative;
+  padding-bottom: 20px;
+  border-color: #e6af2a;
+}
+.fg-text-d,
+.fg-hov-text-d:hover,
+.fg-active-text-d.active {
+  color: #222;
+}
+.font-cond-b {
+  font-weight: 700 !important;
+}
+
+body {
+  margin-top: 20px;
+}
+.team_member {
+  padding-bottom: 50px;
+  overflow: hidden;
+}
+.single_team_content {
+  padding: 45px;
+  margin-top: 60px;
+}
+.single_team_content h1 {
+  font-size: 50px;
+  font-weight: 600;
+  line-height: 60px;
+}
+.our-team {
+  margin-bottom: 30px;
+  box-shadow: 0 10px 40px -10px rgba(0, 64, 128, 0.09);
+}
+.our-team .team_img {
+  position: relative;
+  overflow: hidden;
+}
+.our-team .team_img:after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.2);
+  position: absolute;
+  bottom: -100%;
+  left: 0;
+  transition: all 0.3s ease 0s;
+}
+.our-team:hover .team_img:after {
+  bottom: 0;
+}
+.our-team img {
+  width: 100%;
+  height: auto;
+}
+.our-team .social {
+  padding: 0 0 18px 0;
+  margin: 0;
+  list-style: none;
+  position: absolute;
+  top: -100%;
+  right: 10px;
+  background: #ffaa17;
+  border-radius: 0 0 20px 20px;
+  z-index: 1;
+  transition: all 0.3s ease 0s;
+}
+.our-team:hover .social {
+  top: 0;
+}
+.our-team .social li a {
+  display: block;
+  padding: 15px;
+  font-size: 15px;
+  color: #232434;
+}
+.our-team:hover .social li a:hover {
+  color: #fff;
+}
+.our-team .team-content {
+  padding: 20px 0;
+  background: #fff;
+}
+.our-team .title {
+  font-size: 18px;
+  font-weight: bold;
+  color: #ffaa17;
+  text-transform: capitalize;
+  margin: 0 0 20px;
+  position: relative;
+}
+.our-team .title:before {
+  content: "";
+  width: 25px;
+  height: 1px;
+  background: #ffaa17;
+  position: absolute;
+  bottom: -10px;
+  right: 50%;
+  margin-right: 9px;
+  transition-duration: 0.25s;
+}
+.our-team .title:after {
+  content: "";
+  width: 25px;
+  height: 1px;
+  background: #ffaa17;
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  margin-left: 9px;
+  transition-duration: 0.25s;
+}
+.our-team:hover .title:before,
+.our-team:hover .title:after {
+  width: 50px;
+}
+.our-team .post {
+  display: inline-block;
+  font-size: 15px;
+  text-transform: capitalize;
+}
+.our-team .post:before {
+  content: "";
+  display: block;
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #ffaa17;
+  margin: 0 auto;
+  position: relative;
+  top: -13px;
+}
+@media only screen and (max-width: 990px) {
+  .our-team {
+    margin-bottom: 30px;
   }
 }
